- Added POST tests for handler. Fixed tiny horizontal overflow issue on frontend.

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,21 +1,26 @@
+body {
+  overflow-x: hidden;
+}
+
 .my-footer {
-    height: 5em;
-    background-color: #292b2c;
-    margin-top: 2em;
-    padding: 1.5em;
-    color: white;
-    font-size: 75%;
+  height: 5em;
+  background-color: #292b2c;
+  margin-top: 2em;
+  padding: 1.5em;
+  color: white;
+  font-size: 75%;
+  overflow-x: hidden;
 }
 
 .room-image {
-    max-width: 50%;
+  max-width: 50%;
 }
 
 .datepicker {
-    z-index: 10000 !important;
-    position: absolute;
+  z-index: 10000 !important;
+  position: absolute;
 }
 
 .swal2-actions {
-    z-index: 0;
+  z-index: 0;
 }
